more spanish vps and sheit

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -840,7 +840,7 @@
  STATE_839: "Ashanti"
  STATE_840: "Tonkin"
  STATE_841: "Apurdi"
- STATE_842: "Logrono"
+ STATE_842: "La Rioja"
  STATE_843: "Chotanagpur"
  STATE_844: "Bom Bahia"
  STATE_845: "Kutch"
