--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -379,6 +379,7 @@
  VICTORY_POINTS_819: "Naples"
 #118 - GIBRALTAR
  VICTORY_POINTS_4135: "Gibraltar"
+ VICTORY_POINTS_10749: "Tarifa"
 #119 - ULSTER
  VICTORY_POINTS_3379: "Belfast"
  VICTORY_POINTS_385: "Derry"
@@ -545,16 +546,23 @@
  VICTORY_POINTS_10007: "Rhodos"
 #165 - CATALONIA
  VICTORY_POINTS_9764: "Barcelona"
+ VICTORY_POINTS_6927: "Gerona"
+ VICTORY_POINTS_872: "Lérida"
+ VICTORY_POINTS_6812: "Tarragona"
  VICTORY_POINTS_6966: "Tortosa"
 #166 - ARAGON
  VICTORY_POINTS_3816: "Zaragoza"
 #167 - VALENCIA
+ VICTORY_POINTS_4098: "Alicante"
+ VICTORY_POINTS_6817: "Castellón"
  VICTORY_POINTS_6906: "Valencia"
 #168 - MURCIA
- VICTORY_POINTS_10024: "Murcia"
+ VICTORY_POINTS_832: "Albacete"
+ VICTORY_POINTS_10024: "Cartagena"
+ VICTORY_POINTS_1093: "Murcia"
 #169 - ANDALUSIA
  VICTORY_POINTS_1048: "Cádiz"
- VICTORY_POINTS_875: "Cordoba"
+ VICTORY_POINTS_9815: "Huelva"
  VICTORY_POINTS_7183: "Sevilla"
 #170 - EXTREMADURA
  VICTORY_POINTS_11851: "Badajoz"
@@ -567,8 +575,11 @@
 #172 - NAVARRE
  VICTORY_POINTS_740: "Bilbao"
  VICTORY_POINTS_3933: "Pamplona"
+ VICTORY_POINTS_3737: "San Sebastián"
+ VICTORY_POINTS_3735: "Vitoria"
 #173 - GRANADA
  VICTORY_POINTS_12038: "Almería"
+ VICTORY_POINTS_10009: "Antequera"
  VICTORY_POINTS_1176: "Granada"
  VICTORY_POINTS_9979: "Malaga"
 #174 - LEON
@@ -576,7 +587,8 @@
  VICTORY_POINTS_11843: "Ponferrada"
  VICTORY_POINTS_918: "Zamora"
 #175 - LA MANCHA
- VICTORY_POINTS_6832: "Ciudad Real"
+ VICTORY_POINTS_9778: "Ciudad Real"
+ VICTORY_POINTS_9828: "Valdepeñas"
 #176 - CASTILLE
  VICTORY_POINTS_885: "Burgos"
  VICTORY_POINTS_9872: "Palencia"
@@ -2092,7 +2104,7 @@
 #700 - SIERRA LEONE
  VICTORY_POINTS_2038: "Freetown"
 #701 - MENORCA
- VICTORY_POINTS_9845: "Maó"
+ VICTORY_POINTS_9845: "Mahón"
 #702 - CAPE VERDE
 #703 - ASCENSION
 #704 - SAINT HELENA
@@ -2410,7 +2422,8 @@
  VICTORY_POINTS_1185: "Nam Dinh"
  VICTORY_POINTS_7015: "Thai Nguyen"
 #841 - APURDI
-#842 - LOGRONO
+#842 - LA RIOJA
+ VICTORY_POINTS_3902: "Logroño"
 #843 - BALASORE
  VICTORY_POINTS_4104: "Baleswar"
 #844 - BOM BAHIA
@@ -2906,7 +2919,7 @@
  VICTORY_POINTS_3844: "Katerini"
  VICTORY_POINTS_966: "Kozani"
 #1044 - AKARNANIA
-VICTORY_POINTS_1205: "Mesolongi"
+ VICTORY_POINTS_1205: "Mesolongi"
 #1045 - THESSALY
  VICTORY_POINTS_863: "Larisa"
  VICTORY_POINTS_3973: "Volos"
@@ -3115,6 +3128,12 @@ VICTORY_POINTS_1205: "Mesolongi"
  VICTORY_POINTS_3729: "Oviedo"
 #1194 - CANTABRIA
  VICTORY_POINTS_11688: "Santander"
+#1195 - HUESCA
+ VICTORY_POINTS_11821: "Huesca"
+#1196 - CORDOBA
+ VICTORY_POINTS_875: "Córdoba"
+ VICTORY_POINTS_10111: "Jaén"
+ VICTORY_POINTS_7198: "Lucena"
 #1197 - ALGARVE
  VICTORY_POINTS_6880: "Faro"
  VICTORY_POINTS_3790: "Portimão"
@@ -3566,21 +3585,9 @@ VICTORY_POINTS_1205: "Mesolongi"
 
  VICTORY_POINTS_1409:0 "Madurai"
  VICTORY_POINTS_8067:0 "Selam"
- VICTORY_POINTS_9764:0 "Barcelona"
- VICTORY_POINTS_9845:0 "Maó"
- VICTORY_POINTS_9793:0 "Palma"
- VICTORY_POINTS_7114:0 "Ibiza"
- VICTORY_POINTS_740:0 "Bilbao"
 
- VICTORY_POINTS_875:0 "Cordoba"
 
- VICTORY_POINTS_3816:0 "Zaragoza"
- VICTORY_POINTS_6906:0 "Valencia"
- VICTORY_POINTS_7183:0 "Sevilla"
- VICTORY_POINTS_9979:0 "Malaga"
- VICTORY_POINTS_10024:0 "Murcia"
 
- VICTORY_POINTS_4135:0 "Gibraltar"
 
  VICTORY_POINTS_10919:0 "Porto-Novo"
  VICTORY_POINTS_10862:0 "Accra"
@@ -4146,7 +4153,7 @@ VICTORY_POINTS_1205: "Mesolongi"
  VICTORY_POINTS_6891:0 "Olbia"
  VICTORY_POINTS_6831:0 "Pescara"
  VICTORY_POINTS_1005:0 "Antalya"
- VICTORY_POINTS_1048:0 "Cádiz"
+
  VICTORY_POINTS_1070:0 "Xiuying"
  VICTORY_POINTS_1273:0 "Goa"
 
@@ -4505,7 +4512,7 @@ VICTORY_POINTS_1205: "Mesolongi"
  VICTORY_POINTS_8038:0 "El Aaiún"
  VICTORY_POINTS_1751:0 "Ponta Delgada"
 
- VICTORY_POINTS_6832:0 "Ciudad Real"
+
  VICTORY_POINTS_726:0 "León"
  VICTORY_POINTS_3933:0 "Pamplona"
  VICTORY_POINTS_6966:0 "Tortosa"
