annaba state + concession zone redraw

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1433,7 +1433,7 @@
  VICTORY_POINTS_11969: "Tunis"
 #459 - WESTERN ALGERIA
 #460 - CONSTANTINE
- VICTORY_POINTS_7081: "Annaba"
+ VICTORY_POINTS_7081: "Bône"
  VICTORY_POINTS_4046: "Bejai"
  VICTORY_POINTS_7065: "Constantine"
 #461 - CASABLANCA
@@ -3654,7 +3654,7 @@
  VICTORY_POINTS_9604:0 "Imperatorskaya Gavan"
  VICTORY_POINTS_12559:0 "Nikolayevsk"
  VICTORY_POINTS_291:0 "Ufa"
- VICTORY_POINTS_7081:0 "Annaba"
+ VICTORY_POINTS_7081:0 "Bône"
  VICTORY_POINTS_10059:0 "Batna"
  VICTORY_POINTS_4150:0 "Sidi bel Abbès"
  VICTORY_POINTS_4116:0 "Tlemcen"
