--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -101,7 +101,7 @@
  STATE_100: "Iceland"
  STATE_101: "Greenland"
  STATE_102: "Krain"
- STATE_103: "Dalmatia"
+ STATE_103: "Dalmàssia"
  STATE_104: "Bosnia"
  STATE_105: "Crna Gora"
  STATE_106: "Vardar"
