--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -326,9 +326,9 @@
 #102 - KRAIN
  VICTORY_POINTS_9627: "Laibach"
 #103 - DALMATIA
- VICTORY_POINTS_6889: "Dubrovnik"
- VICTORY_POINTS_3924: "Spalatro"
- VICTORY_POINTS_3943: "Zadar"
+ VICTORY_POINTS_6889: "Ragusa"
+ VICTORY_POINTS_3924: "Spàlato"
+ VICTORY_POINTS_3943: "Zara"
 #104 - BOSNIA
  VICTORY_POINTS_11899: "Sarajevo"
 #105 - CRNA GORA
@@ -3540,7 +3540,7 @@
  VICTORY_POINTS_4379:0 "Hue"
  VICTORY_POINTS_4119:0 "Haiphong"
  VICTORY_POINTS_1464:0 "Vientiane"
- VICTORY_POINTS_3924:0 "Split"
+ VICTORY_POINTS_3924:0 "Spàlato"
  VICTORY_POINTS_9627:0 "Laibach"
  VICTORY_POINTS_11581:0 "Zagreb"
  VICTORY_POINTS_11899:0 "Sarajevo"
@@ -4254,8 +4254,8 @@
  VICTORY_POINTS_11787:0 "Zrenjanin"
  VICTORY_POINTS_6970:0 "Kragujevac"
  VICTORY_POINTS_6983:0 "Banja Luka"
- VICTORY_POINTS_3943:0 "Zadar"
- VICTORY_POINTS_6889:0 "Dubrovnik"
+ VICTORY_POINTS_3943:0 "Zara"
+ VICTORY_POINTS_6889:0 "Ragusa"
  VICTORY_POINTS_9874:0 "Pristina"
  VICTORY_POINTS_9906:0 "Niš"
 
