--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1778,21 +1778,21 @@
     DES_cn_ADJ:0 "Mormon"
     DES_an_ADJ:0 "Mormon"
 
-    NVI_ni:0 "American Republic of New Virgina"
+    NVI_ni:0 "American Republic of New Virginia"
     NVI_ni_DEF:0 "The American Republic of New Virginia"
-    NVI_ds:0 "American Republic of New Virgina"
+    NVI_ds:0 "American Republic of New Virginia"
     NVI_ds_DEF:0 "The American Republic of New Virginia"
-    NVI_rc:0 "American Republic of New Virgina"
+    NVI_rc:0 "American Republic of New Virginia"
     NVI_rc_DEF:0 "The American Republic of New Virginia"
-    NVI_an:0 "American Republic of New Virgina"
+    NVI_an:0 "American Republic of New Virginia"
     NVI_an_DEF:0 "The American Republic of New Virginia"
-    NVI_cn:0 "American Republic of New Virgina"
+    NVI_cn:0 "American Republic of New Virginia"
     NVI_cn_DEF:0 "The American Republic of New Virginia"
-    NVI_lb:0 "American Republic of New Virgina"
+    NVI_lb:0 "American Republic of New Virginia"
     NVI_lb_DEF:0 "The American Republic of New Virginia"
-    NVI_ss:0 "American Republic of New Virgina"
+    NVI_ss:0 "American Republic of New Virginia"
     NVI_ss_DEF:0 "The American Republic of New Virginia"
-    NVI_jc:0 "American Republic of New Virgina"
+    NVI_jc:0 "American Republic of New Virginia"
     NVI_jc_DEF:0 "The American Republic of New Virginia"
     NVI_ni_ADJ:0 "West-American"
     NVI_rc_ADJ:0 "West-American"
@@ -4161,30 +4161,30 @@
     GOS_cn_ADJ:0 "Goshen"
     GOS_an_ADJ:0 "Goshen"
 
-    SWA_ni:0 "Swaziland"
-    SWA_ni_DEF:0 "The Kingdom of Swaziland"
-    SWA_ds:0 "Kingdom of Eswatini"
-    SWA_ds_DEF:0 "the Kingdom of Eswatini"
-    SWA_rc:0 "Swaziland"
-    SWA_rc_DEF:0 "The Kingdom of Swaziland"
-    SWA_an:0 "Swaziland"
-    SWA_an_DEF:0 "The Kingdom of Swaziland"
-    SWA_cn:0 "Swaziland"
-    SWA_cn_DEF:0 "The Kingdom of Swaziland"
-    SWA_lb:0 "Swaziland"
-    SWA_lb_DEF:0 "The Kingdom of Swaziland"
-    SWA_ss:0 "Swaziland"
-    SWA_ss_DEF:0 "The Kingdom of Swaziland"
-    SWA_jc:0 "Swaziland"
-    SWA_jc_DEF:0 "The Kingdom of Swaziland"
-    SWA_ni_ADJ:0 "Eswatini"
-    SWA_rc_ADJ:0 "Eswatini"
-    SWA_lb_ADJ:0 "Eswatini"
-    SWA_ss_ADJ:0 "Eswatini"
-    SWA_jc_ADJ:0 "Eswatini"
-    SWA_ds_ADJ:0 "Eswatini"
-    SWA_cn_ADJ:0 "Eswatini"
-    SWA_an_ADJ:0 "Eswatini"
+    SWA_ni:0 "Zulu Empire"
+    SWA_ni_DEF:0 "The Zulu Empire"
+    SWA_ds:0 "Zulu Empire"
+    SWA_ds_DEF:0 "The Zulu Empire"
+    SWA_rc:0 "Zulu Empire"
+    SWA_rc_DEF:0 "The Zulu Empire"
+    SWA_an:0 "Zulu Empire"
+    SWA_an_DEF:0 "The Zulu Empire"
+    SWA_cn:0 "Zulu Empire"
+    SWA_cn_DEF:0 "The Zulu Empire"
+    SWA_lb:0 "Zulu Empire"
+    SWA_lb_DEF:0 "The Zulu Empire"
+    SWA_ss:0 "Zulu Empire"
+    SWA_ss_DEF:0 "The Zulu Empire"
+    SWA_jc:0 "Zulu Empire"
+    SWA_jc_DEF:0 "The Zulu Empire"
+    SWA_ni_ADJ:0 "Zulu"
+    SWA_rc_ADJ:0 "Zulu"
+    SWA_lb_ADJ:0 "Zulu"
+    SWA_ss_ADJ:0 "Zulu"
+    SWA_jc_ADJ:0 "Zulu"
+    SWA_ds_ADJ:0 "Zulu"
+    SWA_cn_ADJ:0 "Zulu"
+    SWA_an_ADJ:0 "Zulu"
 
     OBR_ni:0 "Occupied Britain"
     OBR_ni_DEF:0 "The British Occupation Authority"
@@ -5244,21 +5244,21 @@
     DAR_cn_ADJ:0 "Darfurian"
     DAR_an_ADJ:0 "Darfurian"
 
-    GAR_ni:0 "The Garenganze Kingdom"
+    GAR_ni:0 "Garenganze Kingdom"
     GAR_ni_DEF:0 "Garenganze Kingdom"
-    GAR_ds:0 "The Garenganze Kingdom"
+    GAR_ds:0 "Garenganze Kingdom"
     GAR_ds_DEF:0 "Garenganze Kingdom"
-    GAR_rc:0 "The Garenganze Kingdom"
+    GAR_rc:0 "Garenganze Kingdom"
     GAR_rc_DEF:0 "Garenganze Kingdom"
-    GAR_an:0 "The Garenganze Kingdom"
+    GAR_an:0 "Garenganze Kingdom"
     GAR_an_DEF:0 "Garenganze Kingdom"
-    GAR_cn:0 "The Garenganze Kingdom"
+    GAR_cn:0 "Garenganze Kingdom"
     GAR_cn_DEF:0 "Garenganze Kingdom"
-    GAR_lb:0 "The Garenganze Kingdom"
+    GAR_lb:0 "Garenganze Kingdom"
     GAR_lb_DEF:0 "Garenganze Kingdom"
-    GAR_ss:0 "The Garenganze Kingdom"
+    GAR_ss:0 "Garenganze Kingdom"
     GAR_ss_DEF:0 "Garenganze Kingdom"
-    GAR_jc:0 "The Garenganze Kingdom"
+    GAR_jc:0 "Garenganze Kingdom"
     GAR_jc_DEF:0 "Garenganze Kingdom"
     GAR_ni_ADJ:0 "Garanganze"
     GAR_rc_ADJ:0 "Garanganze"
