pushing somehow not even half baked socdev

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -77,8 +77,8 @@ PB_Culture_Pol_Expanded_Lore_tt_delayed: "[get_pol_culture_desc]"
 ## -------- Debug -------- ##
 PB_culture_0: "§RERROR§!"
 PB_culture_0_desc: "Check your error.log and game.log to help with debugging."
-state_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_state_culture_name]§!\nInternal Token: §Y[?culture_token]§!\nToken Index: §Y[?culture_token]§!"
-pol_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_pol_culture_name]§!\nInternal Token: §Y[?culture_token]§!\nToken Index: §Y[?culture_token]§!"
+state_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_state_culture_name]§!\nInternal Token: §Y[?culture_id]§!\nToken Index: §Y[?culture_id]§!"
+pol_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_pol_culture_name]§!\nInternal Token: §Y[?culture_id]§!\nToken Index: §Y[?culture_id]§!"
 main_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_main_culture_name]§!\nInternal Token: §Y[?PB_main_culture]§!\nToken Index: §Y[?PB_main_culture]§!"
 
 ## -------- Other Tooltips -------- ##
