2 Spanish dudes & Australia Annexation loc

--- a/localisation/english/PB_annexations_l_english.yml
+++ b/localisation/english/PB_annexations_l_english.yml
@@ -91,5 +91,14 @@
   annexation.1100.b: "Give it to the United Commonwealth"
   annexation.1100.c: "Give it to the Free States"
 
+    # OCEANIA
+
+  annexation_decision_new_georgia: "Fate of New Georgia"
+  annexation_decision_new_georgia_desc: "The region of New Georgia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+
+  annexation_new_georgia: "The Fate of New Georgia"
+  annexation_new_georgia_desc: "The region of New Georgia has been brought under our control as our troops occupy the region. We must now decide what to do with it."
+  annexation.5001.a: "Liberate New Georgia"
+
 
   #Events
