--- a/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_New_Granada_l_english.yml
@@ -15,6 +15,7 @@
   NWG_fal_conde: "Manuel Fal Conde"
   NWG_jose_varela: "José Enrique Varela"
   NWG_ricardo_peral: "Ricardo Rada Peral"
+  NWG_jaime_iii: "Jaime de Borbón"
 
   ##########################
   # IDEAS
