--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -53,7 +53,7 @@ toggle_culture_map_mode_button_tt: "[get_culture_map_mode_toggle_tt]"
 culture_map_mode_tooltip: "[get_culture_map_mode_toggle_tooltip]"
 culture_map_mode_tooltip_delayed: "[get_culture_map_mode_toggle_tooltip_delayed]"
 culture_map_mode_0_tt: "View states' cultures."
-culture_map_mode_0_tooltip: "The majority culture of [FROM.GetName] is §Y[FROM.get_state_culture_name]§![get_state_culture_debug]"
+culture_map_mode_0_tooltip: "The majority culture of [FROM.GetName] is §Y[FROM.get_state_culture_name]§![FROM.get_state_culture_debug]"
 culture_map_mode_0_tooltip_delayed: "[FROM.get_state_culture_desc]"
 culture_map_mode_1_tt: "View other countries' main cultures."
 culture_map_mode_1_tooltip: "The main culture of §Y[FROM.controller.GetFlag][FROM.controller.GetNameDef]§! is §Y[FROM.controller.get_main_culture_name]§![FROM.controller.get_main_culture_debug]"
@@ -77,9 +77,9 @@ PB_Culture_Pol_Expanded_Lore_tt_delayed: "[get_pol_culture_desc]"
 ## -------- Debug -------- ##
 PB_culture_0: "§RERROR§!"
 PB_culture_0_desc: "Check your error.log and game.log to help with debugging."
-state_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_state_culture_name]§!\nInternal Token: §Y[?culture_id]§!\nToken Index: §Y[?culture_id]§!"
-pol_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_pol_culture_name]§!\nInternal Token: §Y[?culture_id]§!\nToken Index: §Y[?culture_id]§!"
-main_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Token: §Y[get_main_culture_name]§!\nInternal Token: §Y[?PB_main_culture]§!\nToken Index: §Y[?PB_main_culture]§!"
+state_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Name: §Y[get_state_culture_name]§!\nInternal ID: §Y[?culture_id]§!"
+pol_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Name: §Y[get_pol_culture_name]§!\nInternal ID: §Y[?culture_id]§!"
+main_culture_debug_entry: "\n\n§HCULTURE DEBUG§!:\nLocalized Name: §Y[get_main_culture_name]§!\nInternal ID: §Y[?PB_main_culture]§!"
 
 ## -------- Other Tooltips -------- ##
 
