socdev reenabled, works almost as intended

--- a/localisation/english/PB_Modifiers_l_english.yml
+++ b/localisation/english/PB_Modifiers_l_english.yml
@@ -6,16 +6,16 @@ rc_drift: "£boost_popularity_texticon Daily Reactionary Support"
 an_drift: "£boost_popularity_texticon Daily Anarcho-Liberal Support"
 cn_drift: "£boost_popularity_texticon Daily Conservative Support"
 lb_drift: "£boost_popularity_texticon Daily Liberal Support"
-ss_drift: "£boost_popularity_texticon Daily State Socialist Support"
+ss_drift: "£boost_popularity_texticon Daily Radical Egalitarian Support"
 jc_drift: "£boost_popularity_texticon Daily Jacobin Support"
 
 ni_acceptance: "£ai_acceptance_texticon Acceptance of Neo-Imperialism Diplomacy"
 ds_acceptance: "£ai_acceptance_texticon Acceptance of Despotism Diplomacy"
 rc_acceptance: "£ai_acceptance_texticon Acceptance of Reactionary Diplomacy"
-an_acceptance: "£ai_acceptance_texticon Acceptance of Anarco-Liberal Diplomacy"
+an_acceptance: "£ai_acceptance_texticon Acceptance of Anarcho-Liberal Diplomacy"
 cn_acceptance: "£ai_acceptance_texticon Acceptance of Conservative Diplomacy"
 lb_acceptance: "£ai_acceptance_texticon Acceptance of Liberal Diplomacy"
-ss_acceptance: "£ai_acceptance_texticon Acceptance of State Socialist Diplomacy"
+ss_acceptance: "£ai_acceptance_texticon Acceptance of Radical Egalitarian Diplomacy"
 jc_acceptance: "£ai_acceptance_texticon Acceptance of Jacobin Diplomacy"
 an_acceptance: "£ai_acceptance_texticon Acceptance of Anarcho-Liberal Diplomacy"
 ### CHARACTERS ###
@@ -71,3 +71,11 @@ sp_tag_livewire_speed_factor_tt: " $sp_tag_livewire_speed_factor$: $RIGHT|+=%1$"
 
 ### POPULATION
 state_monthly_population: "£population_texticon  State Monthly Population"
+
+### SOCDEV 
+social_development_poverty_rate_growth_monthly: "Poverty Status Monthly Growth"
+social_development_industralization_growth_monthly: "Industrialization Monthly Growth"
+social_development_literacy_growth_monthly: "Literacy Monthly Growth"
+social_development_economic_health_growth_monthly: "Economic Health Monthly Growth"
+social_development_military_modernization_growth_monthly: "Military Modernization Monthly Growth"
+social_development_civilization_status_growth_monthly: "Civilization Level Monthly Growth"
