some more cultures + ingame menu tweaks
who the fuck thougt that writing "wallonian" instead of walloon is a good idea?

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -53,13 +53,13 @@ toggle_culture_map_mode_button_tt: "[get_culture_map_mode_toggle_tt]"
 culture_map_mode_tooltip: "[get_culture_map_mode_toggle_tooltip]"
 culture_map_mode_tooltip_delayed: "[get_culture_map_mode_toggle_tooltip_delayed]"
 culture_map_mode_0_tt: "View states' cultures."
-culture_map_mode_0_tooltip: "The majority culture of [FROM.GetName] is §Y[FROM.get_state_culture_name]§![FROM.get_state_culture_debug]"
+culture_map_mode_0_tooltip: "The main culture of [FROM.GetName] is §Y[FROM.get_state_culture_name]§![FROM.get_state_culture_debug]"
 culture_map_mode_0_tooltip_delayed: "[FROM.get_state_culture_desc]"
 culture_map_mode_1_tt: "View other countries' main cultures."
 culture_map_mode_1_tooltip: "The main culture of §Y[FROM.controller.GetFlag][FROM.controller.GetNameDef]§! is §Y[FROM.controller.get_main_culture_name]§![FROM.controller.get_main_culture_debug]"
 culture_map_mode_1_tooltip_delayed: "[FROM.controller.get_main_culture_desc]"
 culture_map_mode_2_tt: "View our accepted states and cultures."
-culture_map_mode_2_tooltip: "The majority culture of [FROM.GetName], §Y[FROM.get_state_culture_name]§!, is[get_culture_map_mode_acceptance_status] accepted in [THIS.GetAdjective] society.[FROM.get_state_culture_debug]"
+culture_map_mode_2_tooltip: "The main culture of [FROM.GetName], §Y[FROM.get_state_culture_name]§!, is[get_culture_map_mode_acceptance_status] accepted in [THIS.GetAdjective] society.[FROM.get_state_culture_debug]"
 culture_map_mode_2_tooltip_delayed: ""
 
 ## -------- Scripted Effect Tooltips -------- ##
@@ -69,7 +69,7 @@ PB_Cultures_remove_accepted_culture_tt: "Remove §Y[get_culture_name]§! as an a
 PB_Cultures_set_main_culture_tt: "Set §Y[get_culture_name]§! as the main culture of §Y[THIS.GetNameWithFlag]§!."
 
 ## -------- Simple View -------- ##
-PB_Culture_Expanded_Lore_tt: "§Y[THIS.GetName]§! state majority culture is: §Y[get_state_culture_name]§![get_state_culture_debug]"
+PB_Culture_Expanded_Lore_tt: "§Y[THIS.GetName]§! state main culture is: §Y[get_state_culture_name]§![get_state_culture_debug]"
 PB_Culture_Expanded_Lore_tt_delayed: "[get_state_culture_desc]"
 PB_Culture_Pol_Expanded_Lore_tt: "[get_pol_culture_name] [PB_Main_or_Accepted][get_pol_culture_debug]"
 PB_Culture_Pol_Expanded_Lore_tt_delayed: "[get_pol_culture_desc]"
@@ -375,6 +375,11 @@ PB_culture_4: "Ulster-Scots"
 PB_culture_5: "Irish"
 PB_culture_6: "Londoner"
 PB_culture_7: "North-English"
+PB_culture_278: "Cornish"
+PB_culture_279: "Manx"
+PB_culture_280: "Scots Gaelic"
+PB_culture_281: "Channelic"
+PB_culture_282: "Doggerlander"
 
 # FRANCE #
 PB_culture_8: "Breton"
@@ -382,11 +387,12 @@ PB_culture_9: "French"
 PB_culture_10: "Occitan"
 PB_culture_11: "Corsican"
 PB_culture_12: "Pied-Noir"
+PB_culture_277: "Arpitan"
 
 # LOWLANDS #
 PB_culture_13: "Dutch"
 PB_culture_14: "Flemish"
-PB_culture_15: "Wallonian"
+PB_culture_15: "Walloon"
 
 # GERMANY #
 PB_culture_16: "West-Prussian"
@@ -409,6 +415,9 @@ PB_culture_31: "Norwegian"
 PB_culture_32: "Finnish"
 PB_culture_33: "Karelian"
 PB_culture_27: "Sami"
+PB_culture_283: "Faroese"
+PB_culture_284: "Icelandic"
+PB_culture_285: "Greenlandic"
 
 # ITALY #
 PB_culture_34: "North-Italian"
@@ -417,13 +426,14 @@ PB_culture_36: "South-Italian"
 PB_culture_37: "Sardinian"
 
 # IBERIA #
-PB_culture_38: "Spanish"
+PB_culture_38: "Castilian"
 PB_culture_39: "Portuguese"
 PB_culture_40: "Galician"
 PB_culture_41: "Catalan"
 PB_culture_42: "Basque"
 PB_culture_43: "Asturian"
 PB_culture_44: "Andalusian"
+PB_culture_286: "Aragonese"
 
 # BALKANS #
 PB_culture_45: "Hellenic"
@@ -715,7 +725,7 @@ PB_culture_12_desc: ""
 
 PB_culture_13_desc: "Revolting from the Spanish Habsburg Hegemony in the middle of the 16th century, the Dutch have presented themselves as a formidable power on the European continent and certainly also as a colonial power. Even discovering many places such as Australia, New Zealand and more. Not only are they a people of conquering, but also of mercantilism, trade, birthplace of modern capitalism, and the founding place of the first ever Republic, which has forever changed the political landscape on the European continent. Although the republic did not last, the people now have a strong royal family, colonial empire and a very distinct liberal identity as a people."
 PB_culture_14_desc: ""
-PB_culture_15_desc: "Although the population largely speaks French, the culture is far straying from that of French culture. It can be best described as mitch match of French, German and Dutch culture, and some parts even having some Luxembourgian culture. Having gained their independence quite recently in 1910 after the Great War, the country was in ruins, but the people of Wallonia managed to not only rebuild the country, but also foster unity amongst there newly independent citizens. The creation of the Wallonian state can be credited to the governments of the imperial powers, who the idea of a buffer state between both France and the Netherlands. They are also the reason that Walloon is the only official language in the country, which was achieved through their anti-French agenda. The people are known too be very friendly, mercantile and most helpful when it comes to most things."
+PB_culture_15_desc: "Although the population largely speaks French, the culture is far straying from that of French culture. It can be best described as mitch match of French, German and Dutch culture, and some parts even having some Luxembourgian culture. Having gained their independence quite recently in 1910 after the Great War, the country was in ruins, but the people of Wallonia managed to not only rebuild the country, but also foster unity amongst there newly independent citizens. The creation of the Walloon state can be credited to the governments of the imperial powers, who the idea of a buffer state between both France and the Netherlands. They are also the reason that Walloon is the only official language in the country, which was achieved through their anti-French agenda. The people are known too be very friendly, mercantile and most helpful when it comes to most things."
 
 # GERMANY #
 
