--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -329,7 +329,7 @@
   PBNews.85.a:0 "Another nation gone dark"
 
   PBNews.86.t:0 "FRANCE MARCHES TO WALLONIA"
-  PBNews.86.d:0 "With the French government’s noticeable rise in Revanchism, few were surprised when they called for the Wallonia’s surrender. The small landlocked nation immediately requested support from the United Kingdoms of Germany, but no such support was provided, leaving them to fend for themselves. Despite the overwhelming size of the French military when compared to Wallonia, they have refused to capitulate. The Wallonian government has called for its people to resist the ‘force of French Revanchism’ in any way they can hoping to cost the French as many soldiers as possible."  
+  PBNews.86.d:0 "With the French government’s noticeable rise in Revanchism, few were surprised when they called for the Wallonia’s surrender. The small landlocked nation immediately requested support from the United Kingdoms of Germany, but no such support was provided, leaving them to fend for themselves. Despite the overwhelming size of the French military when compared to Wallonia, they have refused to capitulate. The Walloon government has called for its people to resist the ‘force of French Revanchism’ in any way they can hoping to cost the French as many soldiers as possible."  
   PBNews.86.a:0 "Like fighting the ocean with a bucket"
 
   PBNews.87.t:0 "EUROPE AT WAR"
@@ -360,12 +360,12 @@
   PBNews.93.d:0 "German Football is really the sport of passion and miracles.\nThe German Football Club Kölner Ballspiel-Club 1901 from Cologn was not even of one biggest clubs of their town and were initially just hoping that they would get a chance to win the West German Cup. Suprinsingly they won it and qualified for the German Championship where the strongest teams from all out of Germany would compete for the title. With heart, passion and a lot of sweat the Kölner made it to the Final where they met their neighbouring rival Fortuna Düsseldorf and subsequently won 1:0."
   PBNews.93.a:0 "A football wonder"
 
-  PBNews.94.t:0 "WALLONIAN CRISIS ESCALATES"
-  PBNews.94.d:0 "With the rise of Germany and France as the main powers on the European Mainland, booths sides have made attempts to expand their borders and influence to outdo the other. But today, such a game of Chess has plunged Europe into war. The French government recently made an attempt to force Wallonia into capitulation, threatening war in they refused. In response, Germany came to the aid of the Wallonian government. Despite this, France refused to back down and has since declared war on Wallonian. With Germany mobilizing against France in response, Europe now finds itself in the middle of a major war between these two powers."
+  PBNews.94.t:0 "WALLOON CRISIS ESCALATES"
+  PBNews.94.d:0 "With the rise of Germany and France as the main powers on the European Mainland, booths sides have made attempts to expand their borders and influence to outdo the other. But today, such a game of Chess has plunged Europe into war. The French government recently made an attempt to force Wallonia into capitulation, threatening war in they refused. In response, Germany came to the aid of the Walloon government. Despite this, France refused to back down and has since declared war on Walloon. With Germany mobilizing against France in response, Europe now finds itself in the middle of a major war between these two powers."
   PBNews.94.a:0 "My god it has begun"
 
-  PBNews.95.t:0 "WALLONIAN CRISIS RELAXES"
-  PBNews.95.d:0 "With the rise of Germany and France as the main powers on the European Mainland, booths sides have made attempts to expand their borders and influence to outdo the other. Fortunately, Germany has proven itself a formidable foe, enough to make France bend. The French government recently made an attempt to force Wallonia into capitulation, threatening war in they refused. In response, Germany came to the aid of the Wallonian government. Rather than risk all-out war, the French government-backed down for its claims. Many within both Wallonia and Germany are celebrating the diplomatic victory. Taking it as proof that Germany is an effective counterbalance to France. The French government has refused to comment on these events. "
+  PBNews.95.t:0 "WALLOON CRISIS RELAXES"
+  PBNews.95.d:0 "With the rise of Germany and France as the main powers on the European Mainland, booths sides have made attempts to expand their borders and influence to outdo the other. Fortunately, Germany has proven itself a formidable foe, enough to make France bend. The French government recently made an attempt to force Wallonia into capitulation, threatening war in they refused. In response, Germany came to the aid of the Walloon government. Rather than risk all-out war, the French government-backed down for its claims. Many within both Wallonia and Germany are celebrating the diplomatic victory. Taking it as proof that Germany is an effective counterbalance to France. The French government has refused to comment on these events. "
   PBNews.95.a:0 "How much longer can Europe last?"
 
   PBNews.96.t:0 "DUTCH CRISIS ESCALATES"
@@ -385,7 +385,7 @@
   PBNews.99.a:0 "Abandonment or Appeasment?"
 
   PBNews.100.t:0 "WALLONIA FALLS"
-  PBNews.100.d:0 "Despite the heroic resistance of the Wallonian military and population, the small nation has been completely overrun. France has immediately gotten to work stamping out Wallonian culture and replacing it with their own, and though remnants of Wallonia’s government are rumoured to have escaped, few hold out hope for the return of its small nation while France occupies it. Some are even saying that Wallonia was the last hope to prevent further French expansion in Europe. "
+  PBNews.100.d:0 "Despite the heroic resistance of the Walloon military and population, the small nation has been completely overrun. France has immediately gotten to work stamping out Walloon culture and replacing it with their own, and though remnants of Wallonia’s government are rumoured to have escaped, few hold out hope for the return of its small nation while France occupies it. Some are even saying that Wallonia was the last hope to prevent further French expansion in Europe. "
   PBNews.100.a:0 "More land reclaimed"
 
   PBNews.101.t:0 "DIETLAND FALLS"
