--- a/localisation/english/PB_State_Focus_l_english.yml
+++ b/localisation/english/PB_State_Focus_l_english.yml
@@ -26,6 +26,9 @@ PB_state_focus_modifiers_4: "£pol_idea Resource Extraction Investments"
 
 PB_State_Focus_Delete_All: "Remove All Active State Focuses"
 
-PB_state_focus_cap_adjust_tt: "[get_state_focus_cap_adjust_increase_decrease] Active State Focus Cap By [?amount|G]"
-PB_state_focus_cap_set_tt: "Set Active State Focus Cap to [?amount|Y]"
+PB_state_focus_increase_tt: "§GIncrease§!"
+PB_state_focus_decrease_tt: "§RDecrease§!"
+
+PB_state_focus_cap_adjust_tt: "[get_state_focus_cap_adjust_increase_decrease] Active State Focus Cap By [?amount|G0]"
+PB_state_focus_cap_set_tt: "Set Active State Focus Cap to [?amount|Y0]"
 PB_state_focus_upgrade_tt: "Improves the §YEffectiveness§! of State Focuses:\nIndustrial Investments: §G+5.00%§!\nMilitary Investments: §G+5.00%§!\nInfrastructure Investments: §G+5.00%§!\nRecruitment Drives: §G+10.00%§!\nResource Extraction Investments: §G+10.00%§!"
