--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -293,14 +293,14 @@
     WLA_ss_DEF:0 "Walloon Republic"
     WLA_jc:0 "Walloon Republic"
     WLA_jc_DEF:0 "Walloon Republic"
-    WLA_ni_ADJ:0 "Wallonian"
-    WLA_rc_ADJ:0 "Wallonian"
-    WLA_lb_ADJ:0 "Wallonian"
-    WLA_ss_ADJ:0 "Wallonian"
-    WLA_jc_ADJ:0 "Wallonian"
-    WLA_ds_ADJ:0 "Wallonian"
-    WLA_cn_ADJ:0 "Wallonian"
-    WLA_an_ADJ:0 "Wallonian"
+    WLA_ni_ADJ:0 "Walloon"
+    WLA_rc_ADJ:0 "Walloon"
+    WLA_lb_ADJ:0 "Walloon"
+    WLA_ss_ADJ:0 "Walloon"
+    WLA_jc_ADJ:0 "Walloon"
+    WLA_ds_ADJ:0 "Walloon"
+    WLA_cn_ADJ:0 "Walloon"
+    WLA_an_ADJ:0 "Walloon"
 
     BSQ_ni:0 "Basque Republic"
     BSQ_ni_DEF:0 "The Basque Republic"
