--- a/localisation/english/PB_country_specific/PB_France_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_France_l_english.yml
@@ -350,7 +350,7 @@
   French.24.a:0 "Vive la France!"
   French.24.b:0 "Vive la Brittany! We shall resist!"
 
-  French.25.t:0 "France Demands Wallonian Annexation"
+  French.25.t:0 "France Demands Walloon Annexation"
   French.25.d:0 "Today the French ambassador has delivered an ultimatum to [Get Leader].  According to said ultimatum, as Wallonia is populated by French speakers and is historically French territory, we must peacefully integrate ourselves into the greater French nation or face total destruction.  Though we face no chance of victory alone, we could invoke our alliance with Germany and hope our former Habsburg overlords will come to our rescue."
   French.25.a:0 "Seek support from Germany"
   French.25.b:0 "We have no choice but to agree"
@@ -1526,7 +1526,7 @@
   PB_FRA_Reintegrate_Brittany_desc:0 "With our liberation of Brittany successful we now have the ardious task of convincing the people who still remain loyal to the government of Boucher what once was, and what can still be. If they still decide to go with their Anglo inspired ways then we will have to liquidate them and any other conspirators."
   PB_FRA_Strike_at_Wallonia:0 "Demand Wallonia"
   PB_FRA_Strike_at_Wallonia_desc:0 "Wallonia always has and always will be a core territory of France. Its fundemental existance is a threat to the French nation and it must be wiped off the map if we wish to truely be safe."
-  PB_FRA_Reintegrate_Wallonia:0 "Crush the Wallonian Resistance"
+  PB_FRA_Reintegrate_Wallonia:0 "Crush the Walloon Resistance"
   PB_FRA_Reintegrate_Wallonia_desc:0 "With Wallonia subjugated and pacified the question of what to do with the government officials of the nation has come about. Many are calling for their heads whilst others simply demand we deport them to London. Either way Wallonia is now French, whether they like it or not."
   PB_FRA_Greater_France:0 "A Dream of Greater France"
   PB_FRA_Greater_France_desc:0 "Whilst France has claimed her core integral territories there are still threats all arounder her that threaten the states mere operation. These diseases of Europe must be wiped out off the maps of Europe, it may be a hard task but its a burden France is willing to bear. "
