--- a/localisation/english/replace/PB_replace_l_english.yml
+++ b/localisation/english/replace/PB_replace_l_english.yml
@@ -129,7 +129,13 @@
   DLC_DESCRIPTION_dlc043: "Included features:\n - §YSpecial Projects§!\n - Military Raids\n - New types of buildings"
  #GoE
   DLC_DESCRIPTION_dlc046: "This is a §GContent Pack§! that don't include new features"
-
+  ##########################
+  # INGAME MENU
+  ##########################
+  MENU_BAR_PAX_REPORT_PROBLEM: "Report a Problem"
+  MENU_BAR_PAX_REPORT_PROBLEM_TT: "This button will redirect you straight to our §Ydiscord \"Bug Reporting\" thread§!"
+  PAX_SOCIALS_INGAME_TEXT: "Pax Brittanica Links:"
+  HOI_SOCIALS_INGAME_TEXT: "Hearts of Iron IV Links:"
   ##########################
   # CHARACTERS
   ##########################
