Prussian naval scientist & tweaks

--- a/localisation/english/PB_country_specific/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Prussia_l_english.yml
@@ -72,6 +72,7 @@
   # Land
   PRS_ernst_kniepkamp: "Ernst Kniepkamp"
   # Navy
+  PRS_wolfgang_wegener: "Wolfgang Wegener"
   # Air
   PRS_kurt_tank: "Kurt Tank"
   # Physics
