Culture & flag stuff

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -401,7 +401,7 @@ PB_culture_18: "Hanoverian"
 PB_culture_19: "Rhenish"
 PB_culture_20: "Saxon"
 PB_culture_21: "South-German"
-PB_culture_22: "Swiss"
+PB_culture_22: "Alemannic"
 PB_culture_23: "Austrian"
 PB_culture_24: "Sudeten"
 PB_culture_25: "Bohemian"
@@ -418,12 +418,16 @@ PB_culture_27: "Sami"
 PB_culture_283: "Faroese"
 PB_culture_284: "Icelandic"
 PB_culture_285: "Greenlandic"
+PB_culture_287: "Fenno-Swedish"
+PB_culture_289: "Norrlander"
 
 # ITALY #
 PB_culture_34: "North-Italian"
 PB_culture_35: "Central-Italian"
-PB_culture_36: "South-Italian"
+PB_culture_36: "Neapolitan"
 PB_culture_37: "Sardinian"
+PB_culture_291: "Sicilian"
+PB_culture_292: "Maltese"
 
 # IBERIA #
 PB_culture_38: "Castilian"
@@ -434,6 +438,7 @@ PB_culture_42: "Basque"
 PB_culture_43: "Asturian"
 PB_culture_44: "Andalusian"
 PB_culture_286: "Aragonese"
+PB_culture_288: "Leonese"
 
 # BALKANS #
 PB_culture_45: "Hellenic"
@@ -502,7 +507,7 @@ PB_culture_102: "Khakas"
 # SOUTH AMERICA #
 PB_culture_103: "Amazonian"
 PB_culture_104: "Argentinean"
-PB_culture_105: "Bolivian"
+PB_culture_105: "Charcan"
 PB_culture_106: "Brazilian"
 PB_culture_107: "Chilean"
 PB_culture_108: "Cisplatine"
