--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -202,6 +202,31 @@
     ITA_cn_ADJ:0 "Italian"
     ITA_an_ADJ:0 "Italian"
 
+    BOL_ni:0 "Charcas"
+    BOL_ni_DEF:0 "Charcas
+    BOL_ds:0 "Charcas"
+    BOL_ds_DEF:0 "Charcas"
+    BOL_rc:0 "Charcas"
+    BOL_rc_DEF:0 "Charcas"
+    BOL_an:0 "Charcas"
+    BOL_an_DEF:0 "Charcas"
+    BOL_cn:0 "Charcas"
+    BOL_cn_DEF:0 "Charcas"
+    BOL_lb:0 "Charcas"
+    BOL_lb_DEF:0 "Charcas"
+    BOL_ss:0 "Charcas"
+    BOL_ss_DEF:0 "Charcas"
+    BOL_jc:0 "Charcas"
+    BOL_jc_DEF:0 "Charcas"
+    BOL_ni_ADJ:0 "Charquino"
+    BOL_rc_ADJ:0 "Charquino"
+    BOL_lb_ADJ:0 "Charquino"
+    BOL_ss_ADJ:0 "Charquino"
+    BOL_jc_ADJ:0 "Charquino"
+    BOL_ds_ADJ:0 "Charquino"
+    BOL_cn_ADJ:0 "Charquino"
+    BOL_an_ADJ:0 "Charquino"
+
     POR_ni:0 "Divine Divine Kingdom of Portugal"
     POR_ni_DEF:0 "The Divine Divine Kingdom of Portugal"
     POR_ds:0 "Divine Kingdom of Portugal"
